package specpaxos;

message Request {
     required bytes op = 1;
     required uint64 clientid = 2;
     required uint64 clientreqid = 3;
}

message UnloggedRequest {
     required bytes op = 1;
     required uint64 clientid = 2;
     required uint64 clientreqid = 3;
}
